    (choose Edit/Preferences, then click the `Advanced' button)

  * Added option to set the MIDI instrument loading in background
    when exporting MIDI instrument mappings to LSCP script.
    (choose Edit/Preferences, then click the `Advanced' button)

  * Implemented an option to change the socket read timeout
    (choose Edit/Preferences, then click the `Backend' tab)

  * Updated LscpTree

  * Fantasia:
    - Major memory optimizations when too many sampler channels are present
    - Improved look and feel
    - Implemented virtual MIDI keyboard
    - Added option to show the Instruments Database on
      the Right-Side Pane of the Fantasia's main window
      (choose Edit/Preferences, then click the `View' tab)
    - Implemented pluggable channel view
    - Implemented Small View for sampler channels
      (right-click on the sampler channel then choose Small View)
    - Implemented option to choose default sampler channel view
      (choose Edit/Preferences, then click the `Defaults' tab)
    - Added context menu to sampler channels
    - Implemented option to show different channel view when
      the mouse pointer is over sampler channel
      (choose Edit/Preferences, then click the `Defaults' tab)
    - The sampler channels are now referenced by their position
      in the list, not by their ID
    - Implemented options to show the channel number and/or the MIDI
      input port/channel on the sampler channel screen when using Small View
      (choose Edit/Preferences, then click the `Channels' tab)
    - Added toolbar to the Right-Side Pane's Instruments Database
    - Added option to hide the active stream/voice count statistic in
      the sampler channel's small view
      (choose Edit/Preferences, then click the `Channels' tab)
    - `Turn off animation effects' checkbox moved to the `View' tab
    - Migrated to substance 5

  * Bug fixes:
    - bugfix: JSampler took forever to load a configuration with
      too many sampler channels