@@ -28,6 +28,7 @@ JSAddDbInstrumentsFromDirDlg.checkScanSubdirs = Scan subdirectories
 JSAddDbInstrumentsFromDirDlg.dest = Choose database directory
 JSAddDbInstrumentsFromDirDlg.source = Choose file system directory
 JSAddDbInstrumentsFromDirDlg.title = Add Instruments From Directory
+JSAddDbInstrumentsFromDirDlg.checkInstrDirs = Add Instruments to separate directories
 
 JSAddDbInstrumentsFromFileDlg.dest = Choose database directory
 JSAddDbInstrumentsFromFileDlg.rbAllInstruments = Add all instruments from the file
